file packaging done

--- a/application/templates/login_registration.html
+++ b/application/templates/login_registration.html
@@ -27,7 +27,7 @@
                 <input class="btn solid" type="submit" value="Login"/>
                 <br>
                 <br>
-                <a class="text" href="{{ url_for('home_page') }}" style="color: black;">Continue without Login</p>
+                <a class="text" href="{{ url_for('home_page') }}" style="color: black; text-decoration: none;" onMouseOver="this.style.color='blue'" onMouseOut="this.style.color='black'">Continue without Login</p>
                 <div class="social-media">
                     <a href="#" class="social-icon">
                         <i class="fab fa-facebook-f"></i>
@@ -64,7 +64,7 @@
                 <input class="btn" type="submit" style="background-color: #ac85ff;" value="Confirm"/>
                 <br>
                 <br>
-                <a class="social-text" href="{{ url_for('home_page') }}" style="color: black;">Continue wihtout any Account</p>
+                <a class="social-text" href="{{ url_for('home_page') }}" style="color: black; text-decoration: none;" onMouseOver="this.style.color='blue'" onMouseOut="this.style.color='black'">Continue without any Account</p>
                 <div class="social-media">
                     <a class="social-icon" href="#">
                         <i class="fab fa-facebook-f"></i>
