--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Home</title>
+    <title>
+        {% block title %}
+        {% endblock %}
+    </title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
@@ -66,6 +69,9 @@
         </div>
     </div>
 </nav>
+
+{% block body %}
+{% endblock %}
 
 
 <script crossorigin="anonymous"
