--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -60,15 +60,27 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a aria-current="page" class="nav-link active" href="{{ url_for('login_registration') }}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active" href="{{ url_for('login_registration') }}">Register</a>
+                    <a aria-current="page" class="nav-link active" href="{{ url_for('login_registration_page') }}">Login/Registration</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+
+{% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
+
+
+
 
 {% block body %}
 {% endblock %}
