--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -10,6 +10,8 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    {% block head %}
+    {% endblock %}
 </head>
 
 <body>
@@ -44,9 +46,9 @@
                        Summarize
                     </a>
                     <ul class="dropdown-menu" style="background-color: #c8cdff;">
-                        <li><a class="dropdown-item" href="#">Link</a></li>
-                        <li><a class="dropdown-item" href="#">Compare</a></li>
                         <li><a class="dropdown-item" href="#">Text</a></li>
+                        <li><a class="dropdown-item" href=" {{ url_for('summarize_link') }} ">Link</a></li>
+                        <li><a class="dropdown-item" href="#">Compare</a></li>
                         <li><a class="dropdown-item" href="#">Upload File</a></li>
                     </ul>
                 </li>
