--- a/application/templates/summarize_link.html
+++ b/application/templates/summarize_link.html
@@ -19,7 +19,7 @@
         <div class="mb-3 container">
             <div class="row">
                 <div class="col-sm-10 mx-auto">
-                    <input type="text" style="background: rgba(255, 255, 255, 1.0);" class="form-control" name="link" required>
+                    <input type="text" style="background: rgba(255, 255, 255, 1.0);" class="form-control" name="link" required placeholder="Enter The URL:">
                 </div>
                 <div class="col-2">
                     <button type="submit" class="btn btn-primary">Summarize</button>
@@ -33,12 +33,12 @@
     <div class="row">
         <div class="col-md p-5" style="border-radius: 50px; border-right: 3px blue dotted;">
             <h2 style="text-align: center;" class="mt-1 mb-3">Input Text</h2>  
-            <h4>Reading Time: {{input_text_reading_time}} </h4>
+            <h4>Reading Time: {{input_text_reading_time}} min</h4>
             <p>{{ input_text }}</p>
         </div>
         <div class="col-md p-5" style="border-radius: 50px; border-left: 3px blue dotted;">
             <h2 style="text-align: center;" class="mt-1 mb-3">Summarized Text</h2>
-            <h4>Reading Time: {{ summarized_text_reading_time }}</h4>
+            <h4>Reading Time: {{ summarized_text_reading_time }} min</h4>
             <p>{{ summarized_text }}</p>
         </div>
     </div>
