Newspaper Summary Done

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg" style="background-image: linear-gradient(-90deg, #639cff, #accbff, #639cff);">
+<nav class="navbar navbar-expand-lg sticky-top" style="background-image: linear-gradient(-90deg, #639cff, #accbff, #639cff);">
     <div class="container-fluid">
         <a class="navbar-brand fs-3" href="#">Short World</a>
         <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
