--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -7,8 +8,8 @@
         {% block title %}
         {% endblock %}
     </title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     {% block head %}
     {% endblock %}
@@ -16,94 +17,284 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg sticky-top" style="background-image: linear-gradient(-90deg, #639cff, #accbff, #639cff);">
-    <div class="container-fluid">
-        <a class="navbar-brand fs-3" href="#">Short World</a>
-        <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-                data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active" href="{{ url_for('home_page') }}">
-                        Home
-                    </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a aria-expanded="false" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button">
-                       News
-                    </a>
-                    <ul class="dropdown-menu" style="background-color: #c8cdff;">
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Latest') }}">Latest News</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='International') }}">International News</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Education') }}">Education</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Economy') }}">Economy</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Politics') }}">Politics</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Sports') }}">Sports</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Lifestyle') }}">Lifestyle</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Science') }}">Science</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('news_page', news_category='Environment') }}">Environment</a></li>
+    <header>
+        <nav class="navbar navbar-expand-lg sticky-top"
+            style="background-image: linear-gradient(-90deg, #639cff, #accbff, #639cff);">
+            <div class="container-fluid">
+                <a class="navbar-brand fs-3" href="#">Short World</a>
+                <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse"
+                    type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a aria-current="page" class="nav-link active" href="{{ url_for('home_page') }}">
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a aria-expanded="false" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
+                                href="#" role="button">
+                                News
+                            </a>
+                            <ul class="dropdown-menu" style="background-color: #c8cdff;">
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Latest') }}">Latest News</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='International') }}">International
+                                        News</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Education') }}">Education</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Economy') }}">Economy</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Politics') }}">Politics</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Sports') }}">Sports</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Lifestyle') }}">Lifestyle</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Science') }}">Science</a></li>
+                                <li><a class="dropdown-item"
+                                        href="{{ url_for('news_page', news_category='Environment') }}">Environment</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a aria-expanded="false" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
+                                href="#" role="button">
+                                Summarize
+                            </a>
+                            <ul class="dropdown-menu" style="background-color: #c8cdff;">
+                                <li><a class="dropdown-item" href="#">Text</a></li>
+                                <li><a class="dropdown-item" href=" {{ url_for('summarize_link') }} ">Link</a></li>
+                                <li><a class="dropdown-item" href="#">Compare</a></li>
+                                <li><a class="dropdown-item" href="#">Upload File</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active">
+                                About Us
+                            </a>
+                        </li>
                     </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a aria-expanded="false" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button">
-                       Summarize
-                    </a>
-                    <ul class="dropdown-menu" style="background-color: #c8cdff;">
-                        <li><a class="dropdown-item" href="#">Text</a></li>
-                        <li><a class="dropdown-item" href=" {{ url_for('summarize_link') }} ">Link</a></li>
-                        <li><a class="dropdown-item" href="#">Compare</a></li>
-                        <li><a class="dropdown-item" href="#">Upload File</a></li>
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a aria-current="page" class="nav-link active"
+                                href="{{ url_for('login_registration_page') }}">Login/Registration</a>
+                        </li>
                     </ul>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link active">
-                        About Us
-                    </a>
-                </li>
-            </ul>
-
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active" href="{{ url_for('login_registration_page') }}">Login/Registration</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-
-{% with messages = get_flashed_messages(with_categories=True) %}
-    {% if messages %}
-        {% for category, message in messages %}
-            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
             </div>
+        </nav>
+
+
+        {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         {% endfor %}
-    {% endif %}
-{% endwith %}
+        {% endif %}
+        {% endwith %}
+    </header>
 
 
 
 
-{% block body %}
-{% endblock %}
+    {% block body %}
+    {% endblock %}
 
 
-<script crossorigin="anonymous"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    <footer class="footer">
+        <div class="footer-left">
+            <span>
+                <p style="font-weight: bolder; font-size: large; margin-left: 10px;"> Short World </p>
+            </span><br>
+            <p>Time is too precious to be wasted.</p>
+            <div class="socials">
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-tumblr"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </div>
+        <ul class="footer-right">
+            <li>
+                <h2>Services</h2>
+                <hr>
+                <ul class="box">
+                    <li><a href="#">Summarize Text</a></li>
+                    <li><a href="#">Scraping the website</a></li>
+                    <li><a href="#">Compare Algorithum</a></li>
+                </ul>
+            </li>
+            <li>
+                <h2>Useful Links</h2>
+                <hr>
+                <ul class="box">
+                    <li><a href="#">Text Smmarization</a></li>
+                    <li><a href="#">Short News</a></li>
+                    <li><a href="#">Compare</a></li>
+                </ul>
+            </li>
+            <li>
+                <h2>About Us</h2>
+                <hr>
+                <ul class="features">
+                    <li><a href="#">Certifications</a></li>
+                    <li><a href="#">Privicy Policy</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Customer Services</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </li>
+        </ul>
+        <div class="footer-bottom">
+            <p>All Copy Right resorved by &copy; conceptial 2022</p>
+        </div>
+    </footer>
+
+
+    <script crossorigin="anonymous" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 
 
 <style>
-*{
-font-family: "Times New Roman", Times, serif;
-}
+    * {
+        font-family: "Times New Roman", Times, serif;
+    }
+
+
+    .footer>* {
+        box-sizing: border-box;
+        flex: 1 100%;
+
+    }
+
+    footer {
+        background-color: rgb(0, 0, 78);
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -0-flex;
+        display: flex;
+        flex-flow: row wrap;
+        padding: 50px;
+        margin-top: 100px;
+    }
+
+    footer>* {
+        font-family: Georgia, serif;
+        color: white;
+    }
+
+
+    .footer-left {
+        margin-right: 1.25em;
+        margin-bottom: 2em;
+    }
+
+    .footer-right {
+        width: 50%;
+    }
+
+    h2 {
+        font-weight: 600;
+        font-size: 17px;
+    }
+
+    .footer ul {
+        list-style: none;
+        padding-left: 0;
+    }
+
+    .footer li {
+        line-height: 2em;
+    }
+
+    .footer a {
+        text-decoration: none;
+    }
+
+    .footer-right {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -0-flex;
+        display: flex;
+        flex-flow: row wrap;
+    }
+
+    .footer-right>* {
+        flex: 1 50%;
+        margin-right: 1.25em;
+    }
+
+    .footer-left p,
+    .footer-right li h2,
+    .footer-right li hr,
+    .footer-bottom p {
+        color: white;
+        font-family: Georgia, serif;
+    }
+
+    .box a {
+        color: #999;
+    }
+
+    .features a {
+        color: #999;
+    }
+
+    .box a:hover,
+    .features a:hover {
+        color: white;
+    }
+
+    .footer-bottom {
+        text-align: center;
+        padding-top: 50px;
+    }
+
+    .footer-left p {
+        padding-right: 20%;
+    }
+
+    .socials a i {
+        color: white;
+        padding: 10px 12px;
+        font-size: 25px;
+    }
+
+    @media screen and (min-width: 600px) {
+        .footer-right>* {
+            flex: 1;
+        }
+
+        .footer-left {
+            flex: 1 0px;
+        }
+
+        .footer-right {
+            flex: 2 0px;
+        }
+    }
+
+    @media (max-width:600px) {
+        .footer {
+            padding: 15px;
+        }
+    }
 </style>
 
 </html>
