compare page complete

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -162,6 +162,14 @@
             </li>
         </ul>
         <div class="footer-bottom">
+            
+            <p>
+                Authors:<br>
+                <a href="https://github.com/AnkanSaha18" class="text-info fs-5" target="_blank">👷 Ankan Saha</a><br>
+                <a href="https://github.com/Abdullah-Al-Shafii" class="text-info fs-5" target="_blank">👷 Abdullah Al Shafi</a><br>
+                <a href="mailto:dumyemail33@gmail.com" target="_blank">🔗 Queries? Get in touch </a><br>
+                <a href="https://github.com/AnkanSaha18/News-Summary/pulls" style="color: greenyellow;" target="_blank">🔗 Interested in collaborating? Create Pull Request.</a>
+            </p>
             <p>All Copy Right resorved by &copy; conceptial 2022</p>
         </div>
     </footer>
