--- a/application/templates/summarize_link.html
+++ b/application/templates/summarize_link.html
@@ -29,15 +29,15 @@
     </form>
 </div>
 
-<div class="container-lg mt-5" style="border-radius: 50px; border: 3px blue dotted; background: rgb(214, 222, 255);">
+<div class="container-lg mt-5" style="border-radius: 10px; border: 3px blue dotted; background: rgb(214, 222, 255);">
     <div class="row">
-        <div class="col-md p-5" style="border-radius: 50px; border-right: 3px blue dotted;">
-            <h2 style="text-align: center;" class="mt-1 mb-3">Input Text</h2>  
+        <div class="col-md p-5" style="border-radius: 10px; border-right: 3px blue dotted;">
+            <h3 style="text-align: center; font-weight: bold;" class="mt-1 mb-3">Input Text</h3>
             <h4>Reading Time: {{input_text_reading_time}} min</h4>
             <p>{{ input_text }}</p>
         </div>
-        <div class="col-md p-5" style="border-radius: 50px; border-left: 3px blue dotted;">
-            <h2 style="text-align: center;" class="mt-1 mb-3">Summarized Text</h2>
+        <div class="col-md p-5" style="border-radius: 10px; border-left: 3px blue dotted;">
+            <h3 style="text-align: center; font-weight: bold;" class="mt-1 mb-3">Summarized Text</h3>
             <h4>Reading Time: {{ summarized_text_reading_time }} min</h4>
             <p>{{ summarized_text }}</p>
         </div>
