--- a/application/templates/login_registration.html
+++ b/application/templates/login_registration.html
@@ -3,22 +3,17 @@
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <script
-            crossorigin="anonymous"
-            src="https://kit.fontawesome.com/64d58efce2.js">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/64d58efce2.js">
     </script>
     <link href="../static/css/login_registration.css" rel="stylesheet"/>
     <title>Register & Login</title>
 </head>
+
 <body>
-
-
 
 <div class="container">
     <div class="forms-container">
         <div class="signin-signup">
-
-
             <form action="#" class="sign-in-form">
                 <h2 class="title">Login</h2>
                 <div class="input-field">
