Requirement File added for deployment

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -93,7 +93,7 @@
                             </li>
                             <li class="nav-item">
                                 <form action="{{ url_for('home_page') }}" method="post">
-                                    <input type="submit" name="logout" class="btn btn-outline-warning btn-sm ms-3" value="Logout"/>
+                                    <input type="submit" name="logout" class="btn btn-outline-light btn-sm ms-3" value="Logout"/>
                                 </form>
                             </li>
                         {% else: %}
