all the compare algo are now spacy

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -15,11 +15,11 @@ Home Page
             </video>
         </div>
     </div>
-    <div style="width: 400px; position: absolute; right:10%; top: 27%;">
+    <div style="width: 400px; position: absolute; right:5%; top: 27%;">
         <div style="text-align: center;">
-            <h3 style="font-size: 40px;">Welcome</h3>
+            <h3 style="font-size: 250%;">Welcome</h3>
             <h3 style="color: rgb(21, 0, 255);">to</h3>
-            <h1 style="font-size: 80px;">Short <span style="color: rgb(255, 140, 0);">World</span></h1>
+            <h1 style="font-size: 500%;">Short <span style="color: rgb(255, 140, 0);">World</span></h1>
         </div>
     </div>
 </div>
